add field fetching
